Update travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,6 @@ install:
  - if head -1 -q *.md | grep '^\-\-\-' >/dev/null 2>&1; then gem install --no-doc kramdown-rfc2629; fi
  - if head -1 -q *.md | grep '^%%%' >/dev/null 2>&1; then go get "$mmark_src" && go build "$mmark_src"; fi
 
-script: make ghpages
+script:
+ - make
+ - make ghpages || make ghpages
